--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "filament/filament": "^3.3",
         "khatabwedaa/blade-css-icons": "^1.5",
         "laravel/framework": "^12.0",
