--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,18 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "asmit/filament-upload": "^1.1",
         "barryvdh/laravel-dompdf": "^3.1",
+        "davidhsianturi/blade-bootstrap-icons": "^2.1",
+        "eightynine/filament-excel-import": "^3.1",
         "filament/filament": "^3.3",
+        "hugomyb/filament-media-action": "^3.1",
+        "joaopaulolndev/filament-pdf-viewer": "^1.0",
         "khatabwedaa/blade-css-icons": "^1.5",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "mckenziearts/blade-untitledui-icons": "^1.4",
+        "pxlrbt/filament-excel": "^2.5",
         "ryangjchandler/filament-progress-column": "^1.0"
     },
     "require-dev": {
