--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "mckenziearts/blade-untitledui-icons": "^1.4",
+        "owenvoke/blade-fontawesome": "^2.9",
         "pxlrbt/filament-excel": "^2.5",
         "ryangjchandler/filament-progress-column": "^1.0"
     },
